--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,14 @@
+Added profiles
+Made some changes to the layout. Rows no longer have a border that isn't clickable.
+Adding a mod through the "Add mod" button that already exists will now get rid of all its files before installing.
+Adding a mod through "Add mod" will now also extract extra files outside of the modfolder.
+Added information about total mods, active mods, how many mods you have selected and what profile is active.
+Added the default loadorder set by author next to current loadorder in the list.
+Changed the application icon.
+Fixed infinite loading screen when a Mod Archive is corrupted and can't be extracted.
+Fixed adding a Mod Archive which adds multiple mod folders not adding all mods to the list.
+Fixed columns being too small when starting the application with an empty list and then adding a mod folder.
+Fixed issue visual issue with mods when author uses a decimal in defaultLoadOrder instead of an integer.
 When adding a mod through the application which already exists the loadorder will now be set to whatever it was before.
-This allows you to easily update your mods without having to remember their previous loadorder.
-Fixed popup message only showing for mods that were set as enabled in profile.
+	* This allows you to easily update your mods without having to remember their previous loadorder.
+Fixed popup message showing for mods that were set as disabled in profile.
