--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ Adding a mod through "Add mod" will now also extract extra files outside of the 
 Added information about total mods, active mods, how many mods you have selected and what profile is active.
 Added the default loadorder set by author next to current loadorder in the list.
 Changed the application icon.
+Added better intructions to what folder primary folder and secondary folder should be.
 Fixed infinite loading screen when a Mod Archive is corrupted and can't be extracted.
 Fixed adding a Mod Archive which adds multiple mod folders not adding all mods to the list.
 Fixed columns being too small when starting the application with an empty list and then adding a mod folder.
